--- a/securecustomerapi/src/main/resources/application.properties
+++ b/securecustomerapi/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=secure-customer-api
 server.port=8080
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/lab09_customer_management?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/lab09_customer_management?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
